@@ -24,6 +24,7 @@
 
 #include <stdio.h>
 #include <unistd.h>
+#include <string.h>
 #include "epl_job.h"
 #include "epl_usb.h"
 
@@ -41,7 +42,8 @@ int epl_page_header(EPL_job_info *epl_job_info)
   int cust_paper_hor;
   int cust_paper_ver;
   int e;
-
+  char data_block_5xL[24];  /* +1 for string termination */
+  char data_block_6xL[35];  /* +1 for string termination */
 
 #ifdef EPL_DEBUG
   fprintf(stderr, "EPL page header\n");
@@ -59,59 +61,80 @@ int epl_page_header(EPL_job_info *epl_job_info)
   cust_paper_hor = epl_job_info->paper_size_mm_h;
   cust_paper_ver = epl_job_info->paper_size_mm_v;
   
+  /* model-indepenent part for 57,58,5900L*/
 
-  /* Create the string */
+  sprintf(data_block_5xL, "%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c",
+	  paper_code,
+	  stripe_size,
+	  bytes_per_row_2 >> 8, bytes_per_row_2,
+	  0x00,
+	  0x00,
+	  0x00,
+	  0x00,
+	  ver_pixels >> 8, ver_pixels,
+	  hor_pixels >> 8, hor_pixels,
+	  total_stripes >> 8, total_stripes,
+	  0x00, /* MP Tray */
+	  0x00,
+	  copies,
+	  0xff,
+	  0xfe,
+	  cust_paper_hor >> 8, cust_paper_hor,
+	  cust_paper_ver >> 8, cust_paper_ver
+	  );
+  
+  /* model-indepenent part for 6100L*/
+  
+  sprintf(data_block_6xL, 
+	  "%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c",
+	  paper_code,                                        /* \183      */
+	  stripe_size,
+	  bytes_per_row_2 >> 8, bytes_per_row_2,             /* \185 \186 */
+	  0x00,0x64,  /* 6100L -  top ofset in 1/10 pixels  = 4mm */
+	  0x00,0x64,  /* 6100L - left ofset in 1/10 pixels  = 4mm */
+	  0x00,0x00,0x00,0x00,  /* 6100L */
+	  ver_pixels >> 8, ver_pixels,                       /* \195 \196 */
+	  hor_pixels >> 8, hor_pixels,                       /* \197 \198 */
+	  total_stripes >> 8, total_stripes,                 /* \199 \200 */
+	  0x00, 0x00, 0x00, 0x00, 0x00, /* 6100L */
+	  copies,                                            /* \206      */ 
+	  0x00, 0x00, 0x01,  /* 6100L */
+	  0x00, 0x00, 0x00,  /* 6100L */
+	  cust_paper_hor >> 8, cust_paper_hor,
+	  cust_paper_ver >> 8, cust_paper_ver
+	  );                                                  /* \214     */
 
+  /* 
+     6100L:
+     avoid page error = 0x80 for at \182 (default 0x00)
+     rather unusual.
+  */
+
+  /* model-specific part: Create the string */
+  
   ts = temp_string;
   if(epl_job_info->model == MODEL_5700L)
     {
-      ts += sprintf(ts, "%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c",
-	0x02, 0x00,
-        paper_code,
-        stripe_size,
-        bytes_per_row_2 >> 8, bytes_per_row_2,
-        0x00,
-        0x00,
-        0x00,
-        0x00,
-        ver_pixels >> 8, ver_pixels,
-        hor_pixels >> 8, hor_pixels,
-        total_stripes >> 8, total_stripes,
-        0xff, /* tray */
-        0x00,
-        copies,
-        0xff,
-        0xfe,
-        cust_paper_hor >> 8, cust_paper_hor,
-        cust_paper_ver >> 8, cust_paper_ver
-        );
+      ts += sprintf(ts, "%c%c",0x02, 0x00);
+      memcpy(ts, data_block_5xL, 23);
+      sprintf(ts + 14, "%c", 0xff); /* 5700L has an auto tray setting */
+      ts += 23;
     }
   else if(epl_job_info->model == MODEL_5800L
           || epl_job_info->model == MODEL_5900L)
     {
-      ts += sprintf(ts, "\x01d");
-      ts += sprintf(ts, "26eps{I");
-      ts += sprintf(ts, "%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c",
-        0x04,0x00,
-        paper_code,
-        stripe_size,
-        bytes_per_row_2 >> 8, bytes_per_row_2,
-        0x00,
-        0x00,
-        0x00,
-        0x00,
-        ver_pixels >> 8, ver_pixels,
-        hor_pixels >> 8, hor_pixels,
-        total_stripes >> 8, total_stripes,
-        0x00, /* tray */
-        0x00,
-        copies,
-        0xff,
-        0xfe,
-        cust_paper_hor >> 8, cust_paper_hor,
-        cust_paper_ver >> 8, cust_paper_ver,
-        0x01
-	);
+      ts += epl_sprintf_wrap(ts, 26);
+      ts += sprintf(ts, "%c%c", 0x04, 0x00);
+      memcpy(ts, data_block_5xL, 23);
+      ts += 23;
+      ts += sprintf(ts, "%c", 0x01);
+    }
+  else if(epl_job_info->model == MODEL_6100L)
+    {
+      ts += epl_sprintf_wrap(ts, 36);
+      ts += sprintf(ts, "F%c", 0x00);
+      memcpy(ts, data_block_6xL, 34);
+      ts += 34;
     }
 
 #ifdef EPL_DEBUG
