@@ -29,6 +29,7 @@
 #define USB_PRODUCT_5700L 0x0001
 #define USB_PRODUCT_5800L 0x0005
 #define USB_PRODUCT_5900L 0x0005
+#define USB_PRODUCT_6100L 0x0005
 
 /* milliseconds */
 #define EPL_USB_WRITE_TIMEOUT 5000
