@@ -1,3 +1,7 @@
+2003-04-02: cvs - Hin-Tak Leung
+   . Header/footer re-organization to add preliminary 6100L support. 
+       Regression-tested 57/58/59 spool file generation.
+
 2003-03-21: cvs - Roberto Ragusa
    . !!Changed parameter name!!:
         The "USB" parameter is now called "FlowControl".
